fixing sttyles for dark mode

--- a/BookQuoteUI/src/styles.scss
+++ b/BookQuoteUI/src/styles.scss
@@ -168,3 +168,8 @@ body.dark-mode .form-select {
   background-color: rgba(197, 197, 197, 0.186);
   color: #ffffff;
 }
+
+body.dark-mode .form-select option {
+  background-color: rgba(197, 197, 197, 0.186);
+  color: #ffffff;
+}
